# zero_to_product

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  pyproject.toml
.github/workflows/: Deploy.yml  backend.yml  frontend.yml
configuration/: base.yaml  intergration_test.yaml  production.yaml  test.yaml
frontend/: Dockerfile  fly.toml  package.json  pnpm-lock.yaml
frontend/src/: app.html
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/login/: +page.svelte
migration/src/: lib.rs  m20230711_142423_create_table.rs  m20230711_145754_subscribedat_should_be_not_null.rs  m20230803_125354_add_status_column_to_subscriptions_table.rs  m20230811_051343_create_user_table.rs  tables.rs
src/: configuration.rs  doc.rs  error.rs  lib.rs  main.rs  route.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/entity/: mod.rs  prelude.rs  sea_orm_active_enums.rs  subscription_tokens.rs  subscriptions.rs  users.rs
src/handler/: health_check.rs  login.rs  mod.rs  newsletters.rs  subscription.rs  subscription_confirm.rs
src/middleware/: authorization.rs  mod.rs
src/utility/: email_client.rs  jwt_handler.rs  mod.rs
tests/integration_test/: conftest.py
tests/integration_test/test_case/: subscribe_test.py
tests/integration_test/utility/: email_mock_server.py
tests/pytest/test_case/: health_test.py  subscribe_test.py
