[package]
name = "zero_to_product"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.18"
tokio = {version="1.28.2", features=["full"]}
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = {version="0.1.37", features=["log"]}
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
utoipa = { version = "3.3.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["axum"] }
