[package]
name = "zero_to_production"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero_to_production"
path = "src/main.rs"

[dependencies]
axum = "0.6.18"
chrono = "0.4.26"
sea-orm = { version = "0.11.3", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.164", features = ["derive"] }
serde-aux = "4.2.0"
serde_urlencoded = "0.7.1"
tokio = {version="1.28.2", features=["full"]}
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = {version="0.1.37", features=["log"]}
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
unicode-segmentation = "1.10.1"
utoipa = { version = "3.3.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["axum"] }
uuid = { version = "1.4.0", features = ["v4"] }
validator = "0.16.0"

[dev-dependencies]
claims = "0.7.1"
