[package]
name = "zero_to_production"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero_to_production"
path = "src/main.rs"

[dependencies]
axum = "0.6.18"
axum-extra = { version = "0.7.7", features = ["cookie"] }
bcrypt = "0.15.0"
chrono = "0.4.26"
config = "0.13.3"
futures = "0.3.28"
http-body = "0.4.5"
jsonwebtoken = "8.3.0"
redis = { version = "0.23.1", features = ["json", "tokio-comp", "tls-rustls", "tokio-rustls-comp", "aio"] }
reqwest = { version = "0.11.18", default-features = false, features = ["json", "rustls-tls"] }
sea-orm = { version = "0.12.1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.164", features = ["derive"] }
serde-aux = "4.2.0"
serde_urlencoded = "0.7.1"
tokio = {version="1.28.2", features=["full"]}
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace", "auth", "validate-request"] }
tracing = {version="0.1.37", features=["log"]}
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
unicode-segmentation = "1.10.1"
url = "2.4.0"
utoipa = { version = "3.3.0", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["axum"] }
uuid = { version = "1.3.3", features = ["v4"] }
validator = "0.16.0"

[dev-dependencies]
claims = "0.7.1"
fake = "2.6.1"
serde_json = "1.0.104"
wiremock = "0.5.19"
